--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -1,3 +1,4 @@
+@import url(variables.css);
 html,
 body,
 * {
@@ -5,24 +6,6 @@ body,
   padding: 0;
   box-sizing: border-box;
   font-size: 62.5%;
-}
-
-:root{
-  --slate-blue:#2a475e;
-  --midnight-blue:#1b2838;
-  --steam-black:#171a21;
-  --light-grey:#D3D3D3;
-  --epic-black:#2F2D2E;
-  --white:	#FFFFFF;
-
-  --primary: var(--steam-black);
-  --secondary: var(--midnight-blue);
-
-  --h1: 10rem;
-  --h2: 5.063rem;
-  --h3: 3.375rem;
-  --h4: 2.25rem;
-  --h5: 1.5rem;
 }
 .site{
   background-color:var(--primary);
@@ -48,8 +31,8 @@ body{
   border: 1px solid #ccc;
   padding: 10px;
   margin: 10px;
-  width: 200px;
-  height: 500px;
+  width: 35rem;
+  height: 50rem;
   text-align: center;
   background-color:var(--steam-black);
   color:var(--light-grey);
@@ -60,4 +43,16 @@ body{
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 20px;
+}
+.game:hover{
+  transform: scale(1.1); /* incase any new images don't have hover effects, otherwise id overrides*/
+  transition: .4s ease-in-out;
+}
+.btn{
+  padding: 3rem;
+  margin: 2rem;
+  font-size: 15px;
+}
+#marketplace{
+  background-color:var(--primary);
 }
